membrane/tests/ui/stream.stderr
error: expected `impl Stream<Item = Result>`
  --> tests/ui/stream.rs:23:30
   |
23 | pub fn one_failure() -> impl Stream<i32, String> {}
   |                              ^^^^^^

error: expected enum `Result`
  --> tests/ui/stream.rs:26:44
   |
26 | pub fn two_failure() -> impl Stream<Item = i32, String> {}
   |                                            ^^^

error: expected a struct or scalar type
  --> tests/ui/stream.rs:29:53
   |
29 | pub fn three_failure() -> impl Stream<Item = Result<Option<i32>, String>> {}
   |                                                     ^^^^^^
